--- a/hackers/fai_weiner/wk2d1/movies/views/layout.erb
+++ b/hackers/fai_weiner/wk2d1/movies/views/layout.erb
@@ -2,9 +2,9 @@
 <head>
   <link rel="stylesheet" href="/css/style.css">
 </head>
-  <h1>Stock Finder</h1>
+  <h1>Movie Poster Finder</h1>
 <nav>
-  <a href="/fetch">Fetch</a>
+  <a href="/fetch">Search new movie</a>
 </nav>
 <body>
   <div class = "results">
