--- a/hackers/fai_weiner/wk2d1/stock/views/form.erb
+++ b/hackers/fai_weiner/wk2d1/stock/views/form.erb
@@ -6,7 +6,7 @@
 <% if @symbol != nil %>
 
 <p>
-  The last trading price of <%= @symbol%> is <%= @price %>.
+  The last trading price of <%= @symbol%> is $<%= @price %>.
 </p>
 
 <% end %>
