Wk2d2 HWs and labs

--- a/hackers/fai_weiner/wk2d1/movies/views/form.erb
+++ b/hackers/fai_weiner/wk2d1/movies/views/form.erb
@@ -5,6 +5,6 @@
 
 <% if @title != nil %>
 <p>
-  <%= @movie["Title"] %> poster: <img src="<%= @poster %>"/>.
+  <strong><%= @movie["Title"] %> (<%= @movie["Year"]%>)</strong> <img src="<%= @poster %>"/>.
 </p>
 <% end %>
