--- a/hackers/allen_hsu/wk2d4/mta/public/css/styles.css
+++ b/hackers/allen_hsu/wk2d4/mta/public/css/styles.css
@@ -55,39 +55,49 @@ label {
   display: block;
 }
 
+/* For Journey Representation*/
+
 #journey {
   width: 7em;
   margin-left: 17em;
   height: 5em;
-  background: grey;
   height: 100%;
   text-align: center;
-  border-radius: 7em;
-  display: flex;
-  padding: 20px;
-  flex-direction: column;
-  box-sizing: border-box;
-
 }
 
-#journey div {
-  display: flex;
+#journey .line {
   width: 5em;
+  height: 10em;
+  border-radius: 10em 10em 0 0 ;
+  text-align: center;
+  color: black;
+  margin: 0 auto -50px auto;
+}
+
+/*Color each line*/
+.N {
+  background: yellow;
+}
+
+.L {
+  background: blue;
+}
+
+.L6 {
+  background: red;
+}
+
+.station_name {
+  width: 100%;
   height: 5em;
   border-radius: 10em;
   background: white;
-  text-align: center;
-  color: black;
-  margin: 1.5em auto 1.5em auto;
-  flex: 1;
-  flex-direction: column;
+  position: relative;
 }
 
-#journey div p {
-  vertical-align: middle;
-  line-height: 5em;
-  flex:1;
+.station_text {
+  display: block;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
 
-}
-#journey div div {
 }
