--- a/hackers/allen_hsu/wk2d4/mta/public/css/styles.css
+++ b/hackers/allen_hsu/wk2d4/mta/public/css/styles.css
@@ -68,10 +68,12 @@ label {
 #journey .line {
   width: 5em;
   height: 10em;
-  border-radius: 10em 10em 0 0 ;
+  border-radius: 0 0 10em 10em ;
   text-align: center;
   color: black;
-  margin: 0 auto -50px auto;
+  margin: -50px auto 0 auto;
+  vertical-align: bottom;
+  position: relative;
 }
 
 /*Color each line*/
@@ -87,17 +89,24 @@ label {
   background: red;
 }
 
+.Seven {
+  background: purple;
+}
+
 .station_name {
   width: 100%;
   height: 5em;
   border-radius: 10em;
   background: white;
-  position: relative;
+  position: absolute;
+  display: table;
+  bottom: 0;
+  z-index: 1;
 }
 
 .station_text {
-  display: block;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
 
 }
