--- a/hackers/allen_hsu/wk2d4/mta/public/css/styles.css
+++ b/hackers/allen_hsu/wk2d4/mta/public/css/styles.css
@@ -3,7 +3,7 @@ body {
   background: black;
   font-family: arial;
 }
-
+/*Main views*/
 #container {
   font-size: 1.5em;
 }
@@ -19,6 +19,11 @@ body {
   display: inline-block;
 }
 
+#plotter {
+  margin-left: 17em;
+  padding-top: 12em;
+}
+/*Input views*/
 label {
   font-size: 2em;
 }
@@ -57,28 +62,33 @@ label {
 
 /* For Journey Representation*/
 
-#journey {
-  width: 7em;
-  margin-left: 17em;
-  height: 5em;
-  height: 100%;
+.journey {
+  width: 5em;
   text-align: center;
+  display: block;
+  margin-top: -11.9em;
+
+}
+.journey #line-name {
+  color: white;
+  z-index: 2;
+  height: 2.5em;
+
 }
 
-#journey .line {
+.journey .line {
   width: 5em;
   height: 10em;
-  border-radius: 0 0 10em 10em ;
+  border-radius: 10em 10em 0 0;
   text-align: center;
   color: black;
   margin: -50px auto 0 auto;
-  vertical-align: bottom;
   position: relative;
 }
 
 /*Color each line*/
 .N {
-  background: yellow;
+  background: green;
 }
 
 .L {
@@ -94,13 +104,12 @@ label {
 }
 
 .station_name {
-  width: 100%;
   height: 5em;
+  width: 100%;
   border-radius: 10em;
   background: white;
   position: absolute;
   display: table;
-  bottom: 0;
   z-index: 1;
 }
 
@@ -108,5 +117,5 @@ label {
   display: table-cell;
   vertical-align: middle;
   text-align: center;
-
+  color: black;
 }
