--- a/hackers/bill_searle/wk2d5/mta_sinatra/views/results.erb
+++ b/hackers/bill_searle/wk2d5/mta_sinatra/views/results.erb
@@ -1,5 +1,11 @@
 <h3>Trip results</h3>
 <p>You are getting on at line <%= @start_line.upcase %> stop <%= @start_station %> and getting off at line <%= @end_line.upcase %> stop <%= @end_station %>.</p>
 
-  <p>You will pass though <%= @trip1 %>,<%= @trip2 %> stations and the total stops is: <%= @trip  %></p>
+  <p>You will pass though <%= @trip_stations %> stations</p>
+  <p>The total stops is: <%= @trip_length %></p>
 
+trip: <%= @trip %><br>
+trip1: <%= @trip1 %><br>
+trip2: <%= @trip2 %><br>
+trip_length <%= @trip_length %><br>
+trip_join <%= @trip_join %><br>
