--- a/hackers/larlyn_tanasap/wk2d4/ulysses/style.css
+++ b/hackers/larlyn_tanasap/wk2d4/ulysses/style.css
@@ -1,5 +1,9 @@
 @import url(http://fonts.googleapis.com/css?family=Droid+Sans:400,700);
 
+html {
+  overflow: auto;
+}
+
 body {
   background: #333;
   padding: 5em;
