--- a/hackers/larlyn_tanasap/wk2d4/mta/views/layout.erb
+++ b/hackers/larlyn_tanasap/wk2d4/mta/views/layout.erb
@@ -3,36 +3,52 @@
 <head>
   <meta charset="UTF-8">
   <title>MTA Trip Planner</title>
+  <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/style.css">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="/js/script.js"></script>
 </head>
 <body>
+    <div id="station_input">
 
     <h1> MTA Trip Planner</h1>
+
     <form action="/" method="get">
-        <label for="stop_on">Where are you getting on?</label>
-        <select id="stop_on" name="stop_on">
-        <option value="<%= "" %>"><%= "" %></option>
-          <% @lines.each_value do |single_line| %>
-              <% single_line.uniq.each do |stop| %>
-              <option value="<%= stop %>"><%= stop %></option>
-              <% end %>
-          <% end %>
-        </select>
-        <label for="stop_off">Where are you getting off?</label>
-        <select id="stop_off" name="stop_off">
 
-          <option value="<%= "" %>"><%= "" %></option>
-          <% @lines.each_value do |single_line| %>
-              <% single_line.uniq.each do |stop| %>
-              <option value="<%= stop %>"><%= stop %></option>
-              <% end %>
-          <% end %>
-        </select>
+      <fieldset>
+        <label for="stop_on">I'm starting my trip at:
+          <select id="stop_on" name="stop_on">
 
-        <button type="submit">Plan my trip!</button>
+            <option value="<%= "" %>"><%= "" %></option>
+            <% $all_stops.uniq.each do |stop| %>
+                <option value="<%= stop %>"><%= stop %></option>
+            <% end %>
+
+          </select>
+        </label>
+        <br>
+        <label for="stop_off">I'm getting off at:
+          <select id="stop_off" name="stop_off">
+
+            <option value="<%= "" %>"><%= "" %></option>
+            <% $all_stops.uniq.each do |stop| %>
+                <option value="<%= stop %>"><%= stop %></option>
+            <% end %>
+
+          </select>
+        </label>
+        </fieldset>
+
+      <button type="submit">Plan my trip!</button>
+
     </form>
-    <p>
-      <%= yield %>
-    </p>
+  </div>
+
+  <div id="results">
+      <div id="tripplan">
+        <%= yield %>
+      </div>
+  </div>
+
 </body>
 </html>
