Remove unneeded code in MTA, tweak css

--- a/hackers/larlyn_tanasap/wk2d4/mta/public/css/style.css
+++ b/hackers/larlyn_tanasap/wk2d4/mta/public/css/style.css
@@ -5,7 +5,7 @@
 }
 
 *:focus {
-  border: 0;
+  outline: 0;
 }
 
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,700,300);
@@ -14,6 +14,11 @@ html {
   background: #111;
   margin: 0;
   overflow: auto;
+  -ms-overflow-style: none;
+}
+
+html::-webkit-scrollbar {
+  width: 0 !important
 }
 
 body {
@@ -25,18 +30,26 @@ body {
   color: #eee;
   font-size: 1.4em;
   font-weight: 300;
+  overflow: auto;
+  /*letter-spacing: 0.0525em;*/
 }
 
 a {
   color:#fff;
+  text-decoration: none;
+}
+
+a:hover, a:active {
+  color: #333;
 }
 
 h1 {
   font-weight: 300;
+  font-size: 2.3em;
 }
 
 div#station_input {
-  padding: 2em;
+  padding: 1.5em;
   background: #bf0000;
   position: fixed;
   width: 100%;
@@ -140,7 +153,7 @@ div.station {
   border: 1em solid #181;
 }
 
-div.station:nth-of-type(2n){
+div.station:nth-of-type(odd){
   background: #dfdf00;
   border: 1em solid #970;
 }
@@ -155,10 +168,10 @@ div.tripline {
   border-left: 1em double #ddd;
   position: absolute;
   z-index: 1;
-  height: 8.3em;
+  height: 8.4em;
   width: 1px;
   margin-left: 2em;
-  margin-top: 13em;
+  margin-top: 12.95em;
 }
 
 div.tripline:hover, div.tripline:active {
@@ -177,24 +190,25 @@ div.stationtext {
   -moz-transform:rotate(-25deg);*/
 }
 
-@media (max-width: 774px){
+@media (max-width: 729px){
   p {
     font-size: 1.6em;
   }
   div#station_input {
-    height: 15em;
+    height: 14em;
   }
   div#results {
     margin-top: 15em;
   }
   form {
+    margin: auto;
     position: relative;
   }
   form button {
     position: relative;
     left: 13em;
   }
-  form button:hover {
+  form button:hover, form button:active {
     position: relative;
     left: 13.2em;
     top: 5px;
@@ -206,9 +220,8 @@ div.stationtext {
     font-size: 1.5em;
   }
   h1 {
-    margin-left: .5em;
-    text-align: center;
-    font-size: 1.8em;
+    margin: auto;
+    font-size: 1.9em;
   }
 
   h2:last-of-type {
@@ -216,7 +229,7 @@ div.stationtext {
   }
 
   div#station_input {
-    height: 17em;
+    height: 16em;
     padding: 1em;
   }
   form {
@@ -233,14 +246,15 @@ div.stationtext {
   }
   form button {
     position: relative;
-    left:4em;
+    left:7.5em;
+    font-size: .7em;
   }
-  form button:hover {
+  form button:hover, form button:active {
     position: relative;
-    left: 4.2em;
+    left: 7.7em;
     top: 5px;
   }
   div#results {
-    margin-top: 17em;
+    margin-top: 16em;
   }
 }
