--- a/hackers/fai_weiner/wk2d1/movies/views/form.erb
+++ b/hackers/fai_weiner/wk2d1/movies/views/form.erb
@@ -1,7 +1,10 @@
 <form action="/fetch" method="get">
   <input type="text" name="Title" placeholder="Title">
   <button>Get movie poster</button>
+  binding.pry
 </form>
+
+<img src="../images/background.png" alt=""/>
 
 <% if @title != nil %>
 <p>
