Fix MTA bug for union square

--- a/hackers/larlyn_tanasap/wk2d4/mta/views/trips.erb
+++ b/hackers/larlyn_tanasap/wk2d4/mta/views/trips.erb
@@ -10,7 +10,7 @@
 
 <% unless @stops_passed.nil? || @stops_passed.empty? %>
   <p>
-  From <span class="stopinfo"><%= params[:stop_on] %></span> on the <span class="stopinfo"><%= @line_on %> line</span>  to <span class="stopinfo"><%= params[:stop_off] %></span>  on the <span class="stopinfo"><%= @line_off %> line</span>.
+  From <span class="stopinfo"><%= params[:stop_on] %></span> on the <span class="stopinfo"><%= @line_on.join %> line</span>  to <span class="stopinfo"><%= params[:stop_off] %></span>  on the <span class="stopinfo"><%= @line_off.join %> line</span>.
   </p><p>
   You will get off <%= @stops_passed.length - 1 %> stop<%= "s" if @stops_passed.length > 2 %> after <span class="stopinfo"><%= @stops_passed.first %></span>.
   </p>
@@ -23,7 +23,7 @@
     <div class="stationtext">
     <%= stop %>
     <br>
-    <em><%= "Switch here to the #{@line_off} Line!" if stop == @intersect %></em>
+    <em><%= "Switch here to the #{@line_off.join} Line!" if stop == @intersect %></em>
     </div>
     <br>
   <% end %>
