--- a/hackers/larlyn_tanasap/wk2d4/mta/views/layout.erb
+++ b/hackers/larlyn_tanasap/wk2d4/mta/views/layout.erb
@@ -21,7 +21,7 @@
 
               <option value="<%= "" %>"><%= "" %></option>
               <% $all_stops.uniq.each do |stop| %>
-                  <option value="<%= stop %>"><%= stop %></option>
+                  <option value="<%= stop %>" <%="selected" if stop == params[:stop_on]%>><%= stop %></option>
               <% end %>
 
             </select>
@@ -32,7 +32,7 @@
 
               <option value="<%= "" %>"><%= "" %></option>
               <% $all_stops.uniq.each do |stop| %>
-                  <option value="<%= stop %>"><%= stop %></option>
+                  <option value="<%= stop %>" <%="selected" if stop == params[:stop_off]%>><%= stop %></option>
               <% end %>
 
             </select>
