--- a/hackers/larlyn_tanasap/wk2d4/ulysses/style.css
+++ b/hackers/larlyn_tanasap/wk2d4/ulysses/style.css
@@ -1,3 +1,12 @@
+* {
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  box-sizing: border-box;         /* Opera/IE 8+ */
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+
 @import url(http://fonts.googleapis.com/css?family=Droid+Sans:400,700);
 
 html {
@@ -6,7 +15,7 @@ html {
 
 body {
   background: #333;
-  padding: 5em;
+  padding: 2em;
   color: #ddd;
   font-family: 'Droid Sans', sans-serif;
   max-width: 960px;
@@ -16,13 +25,15 @@ body {
 
 h2 {
   font-size: 5em;
+  text-align: center;
 }
 
 h3 {
   font-size: 3em;
+  text-align: center;
 }
 
-td{
+td {
   text-align: center;
 }
 
@@ -45,6 +56,7 @@ pre {
   padding-left: 4em;
   line-height: 1.5em;
   font-size: 1.2em;
+  max-width: 960px;
 }
 
 pre:last-of-type {
