updated with URI.encode & no input message

--- a/hackers/xaun_lopez/w2d4/movie2/views/search.erb
+++ b/hackers/xaun_lopez/w2d4/movie2/views/search.erb
@@ -1,7 +1,7 @@
 
 
 <% if @result && @result['Error'] %>
-  <p class='error'><%= @result['Error'] %></p>
+  <p class='error'>You didn't enter anything..</p>
 <% end %>
 
 <% if @result && @result['Search'] %>
