--- a/hackers/xaun_lopez/w2d4/movie2/public/css/style.css
+++ b/hackers/xaun_lopez/w2d4/movie2/public/css/style.css
@@ -1,5 +1,19 @@
 @import url(http://fonts.googleapis.com/css?family=Rock+Salt);
 
+html {
+  background: url(http://i.imgur.com/IeUhuHR.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+body {
+  margin: 0 auto;
+  text-align: center;
+  padding: 20px 0 0 0;
+}
+
 #container {
   margin: auto;
   border-radius: 1em;
@@ -52,14 +66,6 @@ p.error {
   font-size: 1.2em;
 }
 
-body {
-  background-image: url(http://i.imgur.com/IeUhuHR.jpg);
-  background-size: cover;
-  margin: 0 auto;
-  text-align: center;
-  padding: 20px 0 0 0;
-}
-
 img {
   display: inline-block;
 }
@@ -81,6 +87,12 @@ button {
   border-radius: 100px;
   background-color: white;
   border: 2px solid black;
+}
+
+button:hover {
+  background-color: red;
+  font-weight: bold;
+  border: 3px solid black;
 }
 
 h3 {
@@ -118,6 +130,16 @@ h3 {
 
 em {
   font-weight: bold;
+}
+
+@media (max-width: 560px) {
+  div .home {
+    font-size: 1.2em;
+  }
+  .idlinks {
+    font-size: 1.2em;
+    line-height: 1.2em;
+  }
 }
 
 
