--- a/hackers/xaun_lopez/w2d5/mta-2/public/css/style.css
+++ b/hackers/xaun_lopez/w2d5/mta-2/public/css/style.css
@@ -1,7 +1,14 @@
+html {
+  background-image: url(http://i.imgur.com/dLLObOC.jpg);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 
 body {
+  margin-top: 80px;
   text-align: center;
-  background-color: ;
   font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
 }
 
@@ -14,7 +21,7 @@ header h1 a {
   color: black;
   line-height: 80px;
   width: 100%;
-  margin-bottom: 50px;
+  /*margin-bottom: 50px;*/
   letter-spacing: 28px;
   font-size: 2.5em;
 }
@@ -22,18 +29,28 @@ header h1 a {
 #startstation {
   display: inline-block;
   color: black;
-  padding: 0 5px 0 0;
+  font-weight: bold;
 }
 
 #stopstation {
+  font-weight: bold;
   display: inline-block;
   color: black;
-  padding: 0 0 0 5px;
+}
+
+#outer_container {
+  background-color: rgba(255,255,255,0.8);
+  border-radius: 10px;
+  margin: 0 auto;
+  width: 80%;
+  border: 2px solid #7A7A6E;
+  box-shadow: -6px 6px 20px black;
+  padding: 0 15px 15px 15px;
 }
 
 #container {
   display: inline-block;
-  margin-top: 30px;
+  margin-top: 60px;
   margin-bottom: 80px;
   padding: 20px;
   border-radius: 20px;
@@ -41,15 +58,19 @@ header h1 a {
 }
 
 #trip {
+  font-weight: bold;
+  font-size: 1.5em;
   color: black;
   border-radius: 3px;font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
   height: 30px;
 }
 
 select {
+  width: 140px;
+  font-size: 1em;
   background-color: white;
   background-color: white;
-  /*box-shadow: 1px 1px 5px black;*/
+  /*box-shadow: -1px 1px 3px black;*/
   border: 1px solid black;
   border-radius: 3px;font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
   height: 30px;
@@ -65,12 +86,11 @@ h1 {
 }
 
 button {
-  width: 260px;
+  width: 283px;
   display: block;
   margin: auto;
   margin-top: 10px;
   background-color: #BF2E23;
-  /*box-shadow: 2px 2px 5px black;*/
   border: 1px solid black;
   border-radius: 3px;
   padding: 5px;
@@ -78,4 +98,26 @@ button {
   font-weight: bold;
   font-size: 1.5em;
   letter-spacing: 3px;
+}
+
+button:hover, select:hover {
+  box-shadow: -1px 1px 3px black;
+  /*box-shadow: -3px 3px 7px #BCBCB6;*/
+}
+
+@media (max-width: 692px) {
+  button {
+    max-width: 140px;
+  }
+  body {
+    margin-top: 30px;
+  }
+  h1 {
+    font-size: 16px;
+  }
+}
+@media (max-width: 759px) {
+  h1 {
+    font-size: 22px;
+  }
 }
