--- a/hackers/xaun_lopez/w2d5/mta-2/views/layout.erb
+++ b/hackers/xaun_lopez/w2d5/mta-2/views/layout.erb
@@ -5,17 +5,19 @@
   <title>MTA</title>
   <link rel="stylesheet" href="/css/style.css">
 </head>
-<header>
-  <div id="home">
-    <h1>
-      <a href="/">Trip View</a>
-    </h1>
-  </div>
-</header>
-<body>
-  <div id="yield">
-    <%= yield %>
-  </div>
-</body>
+<div id="outer_container">
+  <header>
+    <div id="home">
+      <h1>
+        <a href="/">Trip View</a>
+      </h1>
+    </div>
+  </header>
+  <body>
+    <div id="yield">
+      <%= yield %>
+    </div>
+  </body>
+</div>
 </html>
 
