--- a/hackers/rira_choi/wk2d4/mta_2/views/home.erb
+++ b/hackers/rira_choi/wk2d4/mta_2/views/home.erb
@@ -2,7 +2,7 @@
 
   <div id="start">
   <!-- start-->
-  <label for="start_stop]"> Choose the stop you will get <span>on</span>  :
+  <label for="start_stop"> Choose the stop you will get <span>on</span>  :
      <select name="start_stop"> <!-- This is The key and I can make it hash!input["start_stop"] -->
       <!-- after select put none option and make it selected-->
         <option selected label="none" value="none"> None </option>
