--- a/hackers/allen_hsu/wk4d3/library_app/app/views/layouts/application.html.erb
+++ b/hackers/allen_hsu/wk4d3/library_app/app/views/layouts/application.html.erb
@@ -9,20 +9,22 @@
 <body>
 <div id="container">
   <nav>
-  <<h1>YBary</h1>
-    <ul>
-      <li><%= link_to("Home", root_path) %></li>
-      <li><%= link_to("Books", books_path) %></li>
-      <li><%= link_to("New Books", new_book_path) %></li>
-      <li><%= link_to("Authors", authors_path) %></li>
-      <li><%= link_to("New Author", new_author_path) %></li>
-    </ul>
+  <h1>YBary</h1>
+    <div class="links">
+      <div id="search">
+        <%= form_tag('/search', method: "get") do %>
+          <input type="text" name="query" placeholder="Search!">
+          <%= submit_tag("Search") %>
+        <% end %>
+      </div>
+      <ul>
+        <li><%= link_to("Home", root_path) %></li>
+        <li><%= link_to("Books", books_path) %></li>
+        <li><%= link_to("New Books", new_book_path) %></li>
+        <li><%= link_to("Authors", authors_path) %></li>
+        <li><%= link_to("New Author", new_author_path) %></li>
+      </ul>
 
-    <div id="search">
-      <%= form_tag('/search', method: "get") do %>
-        <input type="text" name="query" placeholder="Search!">
-        <%= submit_tag("Search") %>
-      <% end %>
     </div>
   </nav>
   <div id="content">
